--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,400;0,600;1,400&family=Sen:wght@700&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,400;0,600;0,700;1,400&display=swap"
       rel="stylesheet"
     />
 
@@ -69,39 +69,43 @@
               <div class="cards">
                 <!-- Card 01 -->
                 <div class="card">
-                  <div class="icon-block">
-                    <img
-                      src="./assets/icons/orion-page.svg"
-                      alt="UI/UX Design"
-                      class="icon"
-                    />
+                  <img
+                    src="./assets/icons/orion-page.svg"
+                    alt="UI/UX Design"
+                    class="icon"
+                  />
+
+                  <div class="info">
+                    <p class="label">20 Courses</p>
+                    <p class="title">UI/UX Design</p>
                   </div>
-                  <p class="label">20 Courses</p>
-                  <p class="title">UI/UX Design</p>
                 </div>
+
                 <!-- Card 02 -->
                 <div class="card">
-                  <div class="icon-block">
-                    <img
-                      src="./assets/icons/orion-megaphone.svg"
-                      alt="Development"
-                      class="icon"
-                    />
+                  <img
+                    src="./assets/icons/orion-code-window.svg"
+                    alt="Development"
+                    class="icon"
+                  />
+
+                  <div class="info">
+                    <p class="label">20 Courses</p>
+                    <p class="title">Development</p>
                   </div>
-                  <p class="label">20 Courses</p>
-                  <p class="title">UI/UX Design</p>
                 </div>
                 <!-- Card 03 -->
                 <div class="card">
-                  <div class="icon-block">
-                    <img
-                      src="./assets/icons/orion-code-window.svg"
-                      alt="Marketing"
-                      class="icon"
-                    />
+                  <img
+                    src="./assets/icons/orion-megaphone.svg"
+                    alt="Marketing"
+                    class="icon"
+                  />
+
+                  <div class="info">
+                    <p class="label">30 Courses</p>
+                    <p class="title">Marketing</p>
                   </div>
-                  <p class="label">20 Courses</p>
-                  <p class="title">UI/UX Design</p>
                 </div>
               </div>
             </div>
@@ -118,9 +122,11 @@
               </p>
               <div class="cta-group">
                 <a href="!#" class="btn">See Courses</a>
+                <button></button>
               </div>
             </div>
           </div>
+          <strong>asdasd</strong>
         </div>
       </div>
     </main>
