Build popular courses #3

--- a/index.html
+++ b/index.html
@@ -204,15 +204,21 @@
                 />
                 <div class="body">
                   <div class="head">
-                    <h3 class="title">Basic web design</h3>
+                    <h3 class="title line-clamp word-break-all">
+                      BasicwebdesignLoremipsumdolorsitamet.
+                    </h3>
                     <div class="rating">
-                      <img src="./assets/icons/star.svg" alt="Star Icon" /><span
-                        class="value"
-                        >4.5</span
-                      >
+                      <img
+                        src="./assets/icons/star.svg"
+                        alt="Star Icon"
+                        class="star-icon"
+                      /><span class="value">4.5</span>
                     </div>
                   </div>
-                  <p class="desc desc-2">
+                  <p
+                    class="desc desc-2 line-clamp word-break-all"
+                    style="--line-clamp: 2"
+                  >
                     Get the best course, gain knowledge and shine for your
                     future career.
                   </p>
@@ -232,15 +238,21 @@
                 />
                 <div class="body">
                   <div class="head">
-                    <h3 class="title">UI/UX design</h3>
+                    <h3 class="title line-clamp word-break-all">
+                      UI/UX design
+                    </h3>
                     <div class="rating">
-                      <img src="./assets/icons/star.svg" alt="Star Icon" /><span
-                        class="value"
-                        >4.5</span
-                      >
+                      <img
+                        src="./assets/icons/star.svg"
+                        alt="Star Icon"
+                        class="star-icon"
+                      /><span class="value">4.5</span>
                     </div>
                   </div>
-                  <p class="desc desc-2">
+                  <p
+                    class="desc desc-2 line-clamp word-break-all"
+                    style="--line-clamp: 2"
+                  >
                     Get the best course, gain knowledge and shine for your
                     future career.
                   </p>
@@ -260,15 +272,21 @@
                 />
                 <div class="body">
                   <div class="head">
-                    <h3 class="title">Web App design</h3>
+                    <h3 class="title line-clamp word-break-all">
+                      Web App design
+                    </h3>
                     <div class="rating">
-                      <img src="./assets/icons/star.svg" alt="Star Icon" /><span
-                        class="value"
-                        >4.5</span
-                      >
+                      <img
+                        src="./assets/icons/star.svg"
+                        alt="Star Icon"
+                        class="star-icon"
+                      /><span class="value">4.5</span>
                     </div>
                   </div>
-                  <p class="desc desc-2">
+                  <p
+                    class="desc desc-2 line-clamp word-break-all"
+                    style="--line-clamp: 2"
+                  >
                     Get the best course, gain knowledge and shine for your
                     future career.
                   </p>
